--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,4 @@ LOGFILE_PREFIX=/log
 REDIS_OM_URL=redis://default@localhost:6379/0
 AUTH_SECRET_KEY=su35k4ek7g83b
 SUPERADMIN_PASSWORD=su35k4ek7g83b
+SESSION_EXPIRE_SECONDS=1800  
