--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic-settings = "^2.9.1"
 redis-om = "^0.3.5"
 bcrypt = "^4.3.0"
 pydantic = {extras = ["email"], version = "^2.11.4"}
+httpx = "^0.28.1"
 
 
 [build-system]
