Feat/verify human
* backend debug & frontend /login /signup

* finish frontend

* frontend lib

---------

Co-authored-by: LiangYuJui <liangyujui@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# lib/
 lib64/
 parts/
 sdist/
@@ -61,3 +61,5 @@ venv/
 /docker-compose.env
 
 /log
+
+test.txt
